[package]
name = "axum-api"
version = "0.2.0"
edition = "2021"
authors = ["Balasubramanian Palaniappan <bala@c12.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core axum library
axum = "0"
chrono = "0.4.24"

# JSON parser
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# SQL with MySQL.
sqlx = { version = "0", features = ["runtime-tokio-rustls", "mysql"]}

# Async
tokio = { version = "1.0", features = ["full"] }

# Logging / Tracing.
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"]}

# Form Validation
validator = { version = "0", features = ["derive"]}
