[package]
name = "axum-api"
version = "0.2.0"
edition = "2021"
authors = ["Bala", "bala@c12.io"]
description = "Axum Web API application with SQLx MySQL backend persistance"
readme = "README.md"
license = "MIT"
keywords = ["API", "axum", "mysql", "SQLx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to Reduce the size of release binary.
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# core axum library
axum = { version = "^0", features = ["headers"] }
tower-http = { version = "^0", features = ["cors"] }

# JSON parser
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# SQL with MySQL.
sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls"] }

# Async
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }

# Logging / Tracing.
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }

# Form Validation
validator = { version = "^0", features = ["derive"] }

# Security
rust-argon2 = "1"
rand = "0"

# Utils
chrono = "^0"
dotenvy = "^0"
